# VKOGA

./: README.md  __init__.py  demo.ipynb  demo.py  demo_pgreedy.py  dictionary.py  kernels.py  pgreedy.py  pyproject.toml  setup.cfg  utils.py  vkoga.py
example_files/: 01_validation_tracking.py  02_continue_fit.py
examples/: demo.ipynb  demo.py  demo_kernels.py  demo_pgreedy.py
src/vkoga/: __init__.py  kernels.py  pgreedy.py  vkoga.py
