[metadata]
name = vkoga
version = 0.0.1
license = GPL-3.0
description = Python implementation of the Vectorial Kernel Orthogonal Greedy Algorithm.
long_description = file: README.md
long_description_content_type = text/markdown,
author = Gabriele Santin

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   scipy
   scikit-learn 

[options.packages.find]
where=src
